# skrif

./: README.md
benchmarks/: run.sh
benchmarks/programs/: closures.js  fib_iterative.js  fib_recursive.js  nested_loops.js
project/interpreters/: CMakeLists.txt
project/interpreters/bytecode-based-vm-interpreter/: CMakeLists.txt  README.md
project/interpreters/bytecode-based-vm-interpreter/include/: EnvScope.h  Function.h  call_frame.h  chunk.h  compiler.h  copy_or_ref.h  instruction.h  interpreter.h  json.h  opcode.h  vm.h
project/interpreters/bytecode-based-vm-interpreter/repl/: CMakeLists.txt
project/interpreters/bytecode-based-vm-interpreter/repl/cmake/Modules/: FindReadline.cmake
project/interpreters/bytecode-based-vm-interpreter/repl/src/: disassembler.cpp  disassembler.h  main.cpp
project/interpreters/bytecode-based-vm-interpreter/src/: EnvScope.cpp  Function.cpp  chunk.cpp  compiler.cpp  interpreter.cpp  vm.cpp
project/interpreters/bytecode-based-vm-interpreter/tests/unit_tests/: CMakeLists.txt
project/interpreters/bytecode-based-vm-interpreter/tests/unit_tests/src/arithmetic_expression/: arithmetic_test.cpp
project/interpreters/bytecode-based-vm-interpreter/tests/unit_tests/src/complex_scenarios/: complex_scenarios_test.cpp
project/interpreters/bytecode-based-vm-interpreter/tests/unit_tests/src/function_call/: function_call_test.cpp
project/interpreters/bytecode-based-vm-interpreter/tests/unit_tests/src/if_statement/: if_statement_test.cpp
project/interpreters/bytecode-based-vm-interpreter/tests/unit_tests/src/member_expression/: member_expression_test.cpp
project/interpreters/bytecode-based-vm-interpreter/tests/unit_tests/src/variable_assignment/: variable_assignment_test.cpp
project/interpreters/bytecode-based-vm-interpreter/tests/unit_tests/src/while_statement/: while_statement_test.cpp
project/interpreters/naive_stack_interpreter/: CMakeLists.txt
project/interpreters/naive_stack_interpreter/include/: EnvScope.h  Function.h  VariableStore.h  json.h  stack_machine.h
project/interpreters/naive_stack_interpreter/src/: EnvScope.cpp  Function.cpp  VariableStore.cpp  control_flow_graph.cpp  stack_machine.cpp
project/interpreters/tree-walking-interpreter/: CMakeLists.txt  README.md
project/interpreters/tree-walking-interpreter/include/: EnvScope.h  control_flow_graph.h  copy_or_ref.h  interpreter.h  stack_machine.h  varible_store.h
project/interpreters/tree-walking-interpreter/repl/: CMakeLists.txt
project/interpreters/tree-walking-interpreter/repl/src/: main.cpp
project/interpreters/tree-walking-interpreter/src/: VariableStore.cpp  control_flow_graph.cpp  interpreter.cpp  json.cpp
project/interpreters/tree-walking-interpreter/tests/unit_tests/: CMakeLists.txt
project/interpreters/tree-walking-interpreter/tests/unit_tests/src/: main.cpp
project/interpreters/tree-walking-interpreter/tests/unit_tests/src/arithmetic_expression/: arithmetic_test.cpp
project/interpreters/tree-walking-interpreter/tests/unit_tests/src/complex_scenarios/: complex_scenarios_test.cpp
project/interpreters/tree-walking-interpreter/tests/unit_tests/src/function_call/: function_call_test.cpp
project/interpreters/tree-walking-interpreter/tests/unit_tests/src/if_statment/: if_statment_test.cpp
project/interpreters/tree-walking-interpreter/tests/unit_tests/src/member_expression/: member_expression_test.cpp
project/interpreters/tree-walking-interpreter/tests/unit_tests/src/variable_store/: variable_store_test.cpp
project/interpreters/tree-walking-interpreter/tests/unit_tests/src/varible_assignment/: varible_assignment_test.cpp
project/interpreters/tree-walking-interpreter/tests/unit_tests/src/while_statment/: while_statment_test.cpp
project/parser/: CMakeLists.txt
project/parser/include/: enums.h  i_syntax_node_visitor.h  make_shallow_syntax_node_copy.h  syntax_node_empty_visitor.h  syntax_node_progress_visitor.h  utils.h
project/parser/include/lexical_tokens/: lexical_tokens.h
project/parser/include/syntax_nodes/nonterminals/: bin_expr_syntax_node.h  function_call_syntax_node.h  function_scope_statment_syntax_node.h  function_statment_syntax_node.h
project/parser/include/syntax_nodes/terminals/: dot_syntax_node.h  not_syntax_node.h
project/parser/src/abstract_syntax_tree/: abstract_syntax_tree.cpp
project/parser/src/grammars/: bin_expr_grammar.cpp  f_grammar.cpp  function_call_grammar.cpp  member_expression_grammar.cpp  object_grammar.cpp  scope_grammar.cpp
project/parser/src/lexical_tokens/: lexical_tokens.cpp
project/parser/src/syntax_nodes/nonterminals/: function_call_syntax_node.cpp  function_scope_statment_syntax_node.cpp  function_statment_syntax_node.cpp
project/parser/src/syntax_nodes/terminals/: dot_syntax_node.cpp  not_syntax_node.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/arithmetic_expression/: arithmetic_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/array/: array_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/function_call/: function_call_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/if_statment/: if_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/member_expression/: member_expression_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/object/: object_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/print_statment/: print_statment_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/return_statment/: return_statment_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/scope_statment/: scope_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/varible_assign_expression/: varible_assign_expression_test.cpp
project/parser/tests/unit_tests/src/abstract_syntax_tree/positive/while_statment/: while_test.cpp
project/parser/tests/unit_tests/src/lexical_tokens/if/: if_test.cpp
(+3 files in other folders)
